unpackaged/main/default/objects/Application_Record__c/Application_Record__c.object-meta.xml
<CustomObject>
    <label>Application Record</label>
    <nameField>
        <label>Application Record Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>