unpackaged/main/default/objects/Application_Record__c/fields/Mitel_AMC__c.field-meta.xml
<CustomField>
    <fullName>Mitel_AMC__c</fullName>
    <label>Mitel AMC</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>127422 - Legacy</fullName>
                <default>true</default>
                <label>127422 - Legacy</label>
            </value>
            <value>
                <fullName>144837 - Managed Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>