unpackaged/main/default/objects/Application_Record__c/fields/Source_Comments__c.field-meta.xml
<CustomField>
    <fullName>Source_Comments__c</fullName>
    <label>Source Comments</label>
    <length>500</length>
    <type>Html</type>
</CustomField>